fix navbar on mobile

--- a/src/scss/Navigation.scss
+++ b/src/scss/Navigation.scss
@@ -1,4 +1,5 @@
 .nav {
+  z-index: 10;
   background-color: #993366;
   position: relative;
   top: 0px;
